--- a/clkdev_portfolio/package.json
+++ b/clkdev_portfolio/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "sass": "^1.69.7",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
@@ -19,6 +20,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "bootstrap": "^5.3.2",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
