--- a/clkdev_portfolio/package.json
+++ b/clkdev_portfolio/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.0.8",
     "pinia": "^2.1.7",
     "sass": "^1.69.7",
     "vue": "^3.3.11",
