--- a/clkdev_portfolio/package.json
+++ b/clkdev_portfolio/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.8",
+    "bootstrap-icons": "^1.11.3",
     "pinia": "^2.1.7",
     "sass": "^1.69.7",
     "vue": "^3.3.11",
